--- a/.github/workflows/139-295-ubuntu-gloss-single-blocks-97-111.yml
+++ b/.github/workflows/139-295-ubuntu-gloss-single-blocks-97-111.yml
@@ -1,7 +1,7 @@
-name: 139-280 Ubuntu gloss single blocks 82-96
+name: 139-295 Ubuntu gloss single blocks 97-111
 
 on:
-  workflow_dispatch:
+  pull_request:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -11,15 +11,15 @@ permissions:
   contents: read
 
 jobs:
-  block-82:
-    name: 139-280 Ubuntu gloss block 82
+  block-97:
+    name: 139-295 Ubuntu gloss block 97
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install xattr tooling
         run: sudo apt-get update && sudo apt-get install -y attr
-      - name: Load block 82 and run banish
+      - name: Load block 97 and run banish
         run: |
           set +e
           ulimit -c unlimited || true
@@ -41,9 +41,9 @@ jobs:
               'END { printf "%d\n", idx > outdir "/count" }')
             awk -v outdir="$gloss_dir" "$awk_program" "$gloss_file"
 
-            block="$gloss_dir/block-082.sh"
+            block="$gloss_dir/block-097.sh"
             if [ ! -s "$block" ]; then
-              printf "%s\n" "[gloss-test] missing block 82" >&2
+              printf "%s\n" "[gloss-test] missing block 97" >&2
               exit 1
             fi
             . "$block"
@@ -57,15 +57,15 @@ jobs:
           fi
           exit "$status"
 
-  block-83:
-    name: 139-281 Ubuntu gloss block 83
+  block-98:
+    name: 139-296 Ubuntu gloss block 98
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install xattr tooling
         run: sudo apt-get update && sudo apt-get install -y attr
-      - name: Load block 83 and run banish
+      - name: Load block 98 and run banish
         run: |
           set +e
           ulimit -c unlimited || true
@@ -87,9 +87,9 @@ jobs:
               'END { printf "%d\n", idx > outdir "/count" }')
             awk -v outdir="$gloss_dir" "$awk_program" "$gloss_file"
 
-            block="$gloss_dir/block-083.sh"
+            block="$gloss_dir/block-098.sh"
             if [ ! -s "$block" ]; then
-              printf "%s\n" "[gloss-test] missing block 83" >&2
+              printf "%s\n" "[gloss-test] missing block 98" >&2
               exit 1
             fi
             . "$block"
@@ -103,15 +103,15 @@ jobs:
           fi
           exit "$status"
 
-  block-84:
-    name: 139-282 Ubuntu gloss block 84
+  block-99:
+    name: 139-297 Ubuntu gloss block 99
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install xattr tooling
         run: sudo apt-get update && sudo apt-get install -y attr
-      - name: Load block 84 and run banish
+      - name: Load block 99 and run banish
         run: |
           set +e
           ulimit -c unlimited || true
@@ -133,9 +133,9 @@ jobs:
               'END { printf "%d\n", idx > outdir "/count" }')
             awk -v outdir="$gloss_dir" "$awk_program" "$gloss_file"
 
-            block="$gloss_dir/block-084.sh"
+            block="$gloss_dir/block-099.sh"
             if [ ! -s "$block" ]; then
-              printf "%s\n" "[gloss-test] missing block 84" >&2
+              printf "%s\n" "[gloss-test] missing block 99" >&2
               exit 1
             fi
             . "$block"
@@ -149,15 +149,15 @@ jobs:
           fi
           exit "$status"
 
-  block-85:
-    name: 139-283 Ubuntu gloss block 85
+  block-100:
+    name: 139-298 Ubuntu gloss block 100
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install xattr tooling
         run: sudo apt-get update && sudo apt-get install -y attr
-      - name: Load block 85 and run banish
+      - name: Load block 100 and run banish
         run: |
           set +e
           ulimit -c unlimited || true
@@ -179,9 +179,9 @@ jobs:
               'END { printf "%d\n", idx > outdir "/count" }')
             awk -v outdir="$gloss_dir" "$awk_program" "$gloss_file"
 
-            block="$gloss_dir/block-085.sh"
+            block="$gloss_dir/block-100.sh"
             if [ ! -s "$block" ]; then
-              printf "%s\n" "[gloss-test] missing block 85" >&2
+              printf "%s\n" "[gloss-test] missing block 100" >&2
               exit 1
             fi
             . "$block"
@@ -195,15 +195,15 @@ jobs:
           fi
           exit "$status"
 
-  block-86:
-    name: 139-284 Ubuntu gloss block 86
+  block-101:
+    name: 139-299 Ubuntu gloss block 101
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install xattr tooling
         run: sudo apt-get update && sudo apt-get install -y attr
-      - name: Load block 86 and run banish
+      - name: Load block 101 and run banish
         run: |
           set +e
           ulimit -c unlimited || true
@@ -225,9 +225,9 @@ jobs:
               'END { printf "%d\n", idx > outdir "/count" }')
             awk -v outdir="$gloss_dir" "$awk_program" "$gloss_file"
 
-            block="$gloss_dir/block-086.sh"
+            block="$gloss_dir/block-101.sh"
             if [ ! -s "$block" ]; then
-              printf "%s\n" "[gloss-test] missing block 86" >&2
+              printf "%s\n" "[gloss-test] missing block 101" >&2
               exit 1
             fi
             . "$block"
@@ -241,15 +241,15 @@ jobs:
           fi
           exit "$status"
 
-  block-87:
-    name: 139-285 Ubuntu gloss block 87
+  block-102:
+    name: 139-300 Ubuntu gloss block 102
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install xattr tooling
         run: sudo apt-get update && sudo apt-get install -y attr
-      - name: Load block 87 and run banish
+      - name: Load block 102 and run banish
         run: |
           set +e
           ulimit -c unlimited || true
@@ -271,9 +271,9 @@ jobs:
               'END { printf "%d\n", idx > outdir "/count" }')
             awk -v outdir="$gloss_dir" "$awk_program" "$gloss_file"
 
-            block="$gloss_dir/block-087.sh"
+            block="$gloss_dir/block-102.sh"
             if [ ! -s "$block" ]; then
-              printf "%s\n" "[gloss-test] missing block 87" >&2
+              printf "%s\n" "[gloss-test] missing block 102" >&2
               exit 1
             fi
             . "$block"
@@ -287,15 +287,15 @@ jobs:
           fi
           exit "$status"
 
-  block-88:
-    name: 139-286 Ubuntu gloss block 88
+  block-103:
+    name: 139-301 Ubuntu gloss block 103
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install xattr tooling
         run: sudo apt-get update && sudo apt-get install -y attr
-      - name: Load block 88 and run banish
+      - name: Load block 103 and run banish
         run: |
           set +e
           ulimit -c unlimited || true
@@ -317,9 +317,9 @@ jobs:
               'END { printf "%d\n", idx > outdir "/count" }')
             awk -v outdir="$gloss_dir" "$awk_program" "$gloss_file"
 
-            block="$gloss_dir/block-088.sh"
+            block="$gloss_dir/block-103.sh"
             if [ ! -s "$block" ]; then
-              printf "%s\n" "[gloss-test] missing block 88" >&2
+              printf "%s\n" "[gloss-test] missing block 103" >&2
               exit 1
             fi
             . "$block"
@@ -333,15 +333,15 @@ jobs:
           fi
           exit "$status"
 
-  block-89:
-    name: 139-287 Ubuntu gloss block 89
+  block-104:
+    name: 139-302 Ubuntu gloss block 104
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install xattr tooling
         run: sudo apt-get update && sudo apt-get install -y attr
-      - name: Load block 89 and run banish
+      - name: Load block 104 and run banish
         run: |
           set +e
           ulimit -c unlimited || true
@@ -363,9 +363,9 @@ jobs:
               'END { printf "%d\n", idx > outdir "/count" }')
             awk -v outdir="$gloss_dir" "$awk_program" "$gloss_file"
 
-            block="$gloss_dir/block-089.sh"
+            block="$gloss_dir/block-104.sh"
             if [ ! -s "$block" ]; then
-              printf "%s\n" "[gloss-test] missing block 89" >&2
+              printf "%s\n" "[gloss-test] missing block 104" >&2
               exit 1
             fi
             . "$block"
@@ -379,15 +379,15 @@ jobs:
           fi
           exit "$status"
 
-  block-90:
-    name: 139-288 Ubuntu gloss block 90
+  block-105:
+    name: 139-303 Ubuntu gloss block 105
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install xattr tooling
         run: sudo apt-get update && sudo apt-get install -y attr
-      - name: Load block 90 and run banish
+      - name: Load block 105 and run banish
         run: |
           set +e
           ulimit -c unlimited || true
@@ -409,9 +409,9 @@ jobs:
               'END { printf "%d\n", idx > outdir "/count" }')
             awk -v outdir="$gloss_dir" "$awk_program" "$gloss_file"
 
-            block="$gloss_dir/block-090.sh"
+            block="$gloss_dir/block-105.sh"
             if [ ! -s "$block" ]; then
-              printf "%s\n" "[gloss-test] missing block 90" >&2
+              printf "%s\n" "[gloss-test] missing block 105" >&2
               exit 1
             fi
             . "$block"
@@ -425,15 +425,15 @@ jobs:
           fi
           exit "$status"
 
-  block-91:
-    name: 139-289 Ubuntu gloss block 91
+  block-106:
+    name: 139-304 Ubuntu gloss block 106
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install xattr tooling
         run: sudo apt-get update && sudo apt-get install -y attr
-      - name: Load block 91 and run banish
+      - name: Load block 106 and run banish
         run: |
           set +e
           ulimit -c unlimited || true
@@ -455,9 +455,9 @@ jobs:
               'END { printf "%d\n", idx > outdir "/count" }')
             awk -v outdir="$gloss_dir" "$awk_program" "$gloss_file"
 
-            block="$gloss_dir/block-091.sh"
+            block="$gloss_dir/block-106.sh"
             if [ ! -s "$block" ]; then
-              printf "%s\n" "[gloss-test] missing block 91" >&2
+              printf "%s\n" "[gloss-test] missing block 106" >&2
               exit 1
             fi
             . "$block"
@@ -471,15 +471,15 @@ jobs:
           fi
           exit "$status"
 
-  block-92:
-    name: 139-290 Ubuntu gloss block 92
+  block-107:
+    name: 139-305 Ubuntu gloss block 107
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install xattr tooling
         run: sudo apt-get update && sudo apt-get install -y attr
-      - name: Load block 92 and run banish
+      - name: Load block 107 and run banish
         run: |
           set +e
           ulimit -c unlimited || true
@@ -501,9 +501,9 @@ jobs:
               'END { printf "%d\n", idx > outdir "/count" }')
             awk -v outdir="$gloss_dir" "$awk_program" "$gloss_file"
 
-            block="$gloss_dir/block-092.sh"
+            block="$gloss_dir/block-107.sh"
             if [ ! -s "$block" ]; then
-              printf "%s\n" "[gloss-test] missing block 92" >&2
+              printf "%s\n" "[gloss-test] missing block 107" >&2
               exit 1
             fi
             . "$block"
@@ -517,15 +517,15 @@ jobs:
           fi
           exit "$status"
 
-  block-93:
-    name: 139-291 Ubuntu gloss block 93
+  block-108:
+    name: 139-306 Ubuntu gloss block 108
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install xattr tooling
         run: sudo apt-get update && sudo apt-get install -y attr
-      - name: Load block 93 and run banish
+      - name: Load block 108 and run banish
         run: |
           set +e
           ulimit -c unlimited || true
@@ -547,9 +547,9 @@ jobs:
               'END { printf "%d\n", idx > outdir "/count" }')
             awk -v outdir="$gloss_dir" "$awk_program" "$gloss_file"
 
-            block="$gloss_dir/block-093.sh"
+            block="$gloss_dir/block-108.sh"
             if [ ! -s "$block" ]; then
-              printf "%s\n" "[gloss-test] missing block 93" >&2
+              printf "%s\n" "[gloss-test] missing block 108" >&2
               exit 1
             fi
             . "$block"
@@ -563,15 +563,15 @@ jobs:
           fi
           exit "$status"
 
-  block-94:
-    name: 139-292 Ubuntu gloss block 94
+  block-109:
+    name: 139-307 Ubuntu gloss block 109
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install xattr tooling
         run: sudo apt-get update && sudo apt-get install -y attr
-      - name: Load block 94 and run banish
+      - name: Load block 109 and run banish
         run: |
           set +e
           ulimit -c unlimited || true
@@ -593,9 +593,9 @@ jobs:
               'END { printf "%d\n", idx > outdir "/count" }')
             awk -v outdir="$gloss_dir" "$awk_program" "$gloss_file"
 
-            block="$gloss_dir/block-094.sh"
+            block="$gloss_dir/block-109.sh"
             if [ ! -s "$block" ]; then
-              printf "%s\n" "[gloss-test] missing block 94" >&2
+              printf "%s\n" "[gloss-test] missing block 109" >&2
               exit 1
             fi
             . "$block"
@@ -609,15 +609,15 @@ jobs:
           fi
           exit "$status"
 
-  block-95:
-    name: 139-293 Ubuntu gloss block 95
+  block-110:
+    name: 139-308 Ubuntu gloss block 110
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install xattr tooling
         run: sudo apt-get update && sudo apt-get install -y attr
-      - name: Load block 95 and run banish
+      - name: Load block 110 and run banish
         run: |
           set +e
           ulimit -c unlimited || true
@@ -639,9 +639,9 @@ jobs:
               'END { printf "%d\n", idx > outdir "/count" }')
             awk -v outdir="$gloss_dir" "$awk_program" "$gloss_file"
 
-            block="$gloss_dir/block-095.sh"
+            block="$gloss_dir/block-110.sh"
             if [ ! -s "$block" ]; then
-              printf "%s\n" "[gloss-test] missing block 95" >&2
+              printf "%s\n" "[gloss-test] missing block 110" >&2
               exit 1
             fi
             . "$block"
@@ -655,15 +655,15 @@ jobs:
           fi
           exit "$status"
 
-  block-96:
-    name: 139-294 Ubuntu gloss block 96
+  block-111:
+    name: 139-309 Ubuntu gloss block 111
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install xattr tooling
         run: sudo apt-get update && sudo apt-get install -y attr
-      - name: Load block 96 and run banish
+      - name: Load block 111 and run banish
         run: |
           set +e
           ulimit -c unlimited || true
@@ -685,9 +685,9 @@ jobs:
               'END { printf "%d\n", idx > outdir "/count" }')
             awk -v outdir="$gloss_dir" "$awk_program" "$gloss_file"
 
-            block="$gloss_dir/block-096.sh"
+            block="$gloss_dir/block-111.sh"
             if [ ! -s "$block" ]; then
-              printf "%s\n" "[gloss-test] missing block 96" >&2
+              printf "%s\n" "[gloss-test] missing block 111" >&2
               exit 1
             fi
             . "$block"
